<resources>
    <string name="app_name">Movieku</string>
    <string name="type">Type</string>
    <string name="hour">Hour</string>
    <string name="director">Directors</string>
    <string name="desc">Avengers: Endgame dimulai tepat saat Thanos menjentikan jarinya, menghabisi setengah penduduk bumi. Hawkeye yang absen dalam Avengers: Infinity War, muncul paling awal dalam film ini.</string>
    <string name="title">Avengers:  \nEndgame</string>
    <string name="type_detail">Action, Adventure, Drama</string>
    <string name="hour_detail">3 Hour 1 min</string>
    <string name="director_detail">Anthony Russo, Joe Russo</string>


    <string-array name="data_name">
        <item>Iron Man (2008)</item>
        <item>Iron Man 2 (2010)</item>
        <item>Thor (2011)</item>
        <item>Captain America: The First Avenger (2011)</item>
        <item>The Avengers (2012)</item>

        <item>Iron Man Three (2013)</item>
        <item>Thor: The Dark World (2013)</item>
        <item>Captain America: The Winter Soldier (2014)</item>
        <item>Guardians of the Galaxy (2014)</item>
        <item>Avengers: Age of Ultron (2015)</item>

        <item>Ant-Man (2015)</item>
        <item>Captain America: Civil War (2016)</item>
        <item>Doctor Strange (2016)</item>
        <item>Guardians of the Galaxy Vol.2 (2017)</item>
        <item>Spider-Man: Homecoming (2017)</item>

        <item>Thor: Ragnarok (2017)</item>
        <item>Black Panther (2018)</item>
        <item>Avengers: Infinity War (2018)</item>
        <item>Ant-Man and the Wasp (2018)</item>
        <item>Captain Marvel (2019)</item>

        <item>Avengers : Endgame (2019)</item>
        <item>Spider-Man : Far from Home (2019)</item>
    </string-array>

    <string-array name="data_rating">
        <item>3.95</item>
        <item>3.5</item>
        <item>3.5</item>
        <item>3.45</item>
        <item>4</item>

        <item>3.6</item>
        <item>3.45</item>
        <item>3.85</item>
        <item>4</item>
        <item>3.65</item>

        <item>3.65</item>
        <item>3.9</item>
        <item>3.75</item>
        <item>3.8</item>
        <item>3.7</item>

        <item>3.95</item>
        <item>3.65</item>
        <item>4.25</item>
        <item>3.5</item>
        <item>3.45</item>

        <item>4.25</item>
        <item>3.8</item>
    </string-array>

    <array name="data_type">
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Fantasy</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Sci-Fi</item>

        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Fantasy</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Comedy</item>
        <item>Action, Adventure,\n Sci-Fi</item>

        <item>Action, Adventure,\n Comedy</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Fantasy</item>
        <item>Action, Adventure,\n Comedy</item>
        <item>Action, Adventure,\n Sci-Fi</item>

        <item>Action, Adventure,\n Comedy</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Sci-Fi</item>
        <item>Action, Adventure,\n Comedy</item>
        <item>Action, Adventure,\n Sci-Fi</item>

        <item>Action, Adventure,\n Drama</item>
        <item>Action, Adventure,\n Sci-Fi</item>
    </array>

    <array name="data_desc">
        <item>After being held captive in an Afghan cave, billionaire engineer Tony Stark creates a unique weaponized suit of armor to fight evil.</item>
        <item>With the world now aware of his identity as Iron Man, Tony Stark must contend with both his declining health and a vengeful mad man with ties to his father\'s legacy.</item>
        <item>The powerful but arrogant god Thor is cast out of Asgard to live amongst humans in Midgard (Earth), where he soon becomes one of their finest defenders.</item>
        <item>Steve Rogers, a rejected military soldier transforms into Captain America after taking a dose of a \"Super-Soldier serum\". But being Captain America comes at a price as he attempts to take down a war monger and a terrorist organization.</item>
        <item>Earth\'s mightiest heroes must come together and learn to fight as a team if they are going to stop the mischievous Loki and his alien army from enslaving humanity.</item>

        <item>When Tony Stark\'s world is torn apart by a formidable terrorist called the Mandarin, he starts an odyssey of rebuilding and retribution.</item>
        <item>When the Dark Elves attempt to plunge the universe into darkness, Thor must embark on a perilous and personal journey that will reunite him with doctor Jane Foster.</item>
        <item>As Steve Rogers struggles to embrace his role in the modern world, he teams up with a fellow Avenger and S.H.I.E.L.D agent, Black Widow, to battle a new threat from history: an assassin known as the Winter Soldier.</item>
        <item>A group of intergalactic criminals must pull together to stop a fanatical warrior with plans to purge the universe.</item>
        <item>When Tony Stark and Bruce Banner try to jump-start a dormant peacekeeping program called Ultron, things go horribly wrong and it\'s up to Earth\'s mightiest heroes to stop the villainous Ultron from enacting his terrible plan.</item>

        <item>Armed with a super-suit with the astonishing ability to shrink in scale but increase in strength, cat burglar Scott Lang must embrace his inner hero and help his mentor, Dr. Hank Pym, plan and pull off a heist that will save the world.</item>
        <item>Political involvement in the Avengers\' affairs causes a rift between Captain America and Iron Man.</item>
        <item>While on a journey of physical and spiritual healing, a brilliant neurosurgeon is drawn into the world of the mystic arts.</item>
        <item>The Guardians struggle to keep together as a team while dealing with their personal family issues, notably Star-Lord\'s encounter with his father the ambitious celestial being Ego.</item>
        <item>Peter Parker balances his life as an ordinary high school student in Queens with his superhero alter-ego Spider-Man, and finds himself on the trail of a new menace prowling the skies of New York City.</item>

        <item>Imprisoned on the planet Sakaar, Thor must race against time to return to Asgard and stop Ragnarök, the destruction of his world, at the hands of the powerful and ruthless villain Hela.</item>
        <item>T\'Challa, heir to the hidden but advanced kingdom of Wakanda, must step forward to lead his people into a new future and must confront a challenger from his country\'s past.</item>
        <item>The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</item>
        <item>As Scott Lang balances being both a superhero and a father, Hope van Dyne and Dr. Hank Pym present an urgent new mission that finds the Ant-Man fighting alongside The Wasp to uncover secrets from their past.</item>
        <item>Carol Danvers becomes one of the universe\'s most powerful heroes when Earth is caught in the middle of a galactic war between two alien races.</item>

        <item>After the devastating events of Avengers: Infinity War (2018), the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</item>
        <item>Following the events of Avengers: Endgame (2019), Spider-Man must step up to take on new threats in a world that has changed forever.</item>
    </array>

    <array name="data_director">
        <item>Jon Favreau</item>
        <item>Jon Favreau</item>
        <item>Kenneth Branagh</item>
        <item>Joe Johnston</item>
        <item>Joss Whedon</item>

        <item>Shane Black</item>
        <item>Alan Taylor</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>James Gunn</item>
        <item>Joss Whedon</item>

        <item>Peyton Reed</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>Scott Derrickson</item>
        <item>James Gunn</item>
        <item>Jon Watts</item>

        <item>Taika Waititi</item>
        <item>Ryan Coogler</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>Peyton Reed</item>
        <item>Anna Boden, Ryan Fleck</item>

        <item>Anthony Russo, Joe Russo</item>
        <item>Jon Watts</item>

    </array>

    <array name="data_hour">
        <item>2h 6min</item>
        <item>2h 4min</item>
        <item>1h 55min</item>
        <item>2h 4min</item>
        <item>2h 23min</item>

        <item>2h 10min</item>
        <item>1h 52min</item>
        <item>2h 16min</item>
        <item>2h 1min</item>
        <item>2h 21min</item>

        <item>1h 57min</item>
        <item>2h 27min</item>
        <item>1h 55min</item>
        <item>2h 16min</item>
        <item>2h 13min</item>

        <item>2h 10min</item>
        <item>2h 14min</item>
        <item>2h 29min</item>
        <item>1h 58min</item>
        <item>2h 3min</item>

        <item>3h 1min</item>
        <item>2h 9min</item>
    </array>


    <array name="data_photo">
        <item>@drawable/p_ironman</item>
        <item>@drawable/p_ironmann</item>
        <item>@drawable/p_thor</item>
        <item>@drawable/p_capt</item>
        <item>@drawable/p_avengers</item>

        <item>@drawable/p_ironmannn</item>
        <item>@drawable/p_thorr</item>
        <item>@drawable/p_captt</item>
        <item>@drawable/p_gotg</item>
        <item>@drawable/p_avengerss</item>

        <item>@drawable/p_ant</item>
        <item>@drawable/p_capttt</item>
        <item>@drawable/p_doctor</item>
        <item>@drawable/p_gotgg</item>
        <item>@drawable/p_spider</item>

        <item>@drawable/p_thorrr</item>
        <item>@drawable/p_bp</item>
        <item>@drawable/p_aiw</item>
        <item>@drawable/p_antt</item>
        <item>@drawable/p_cm</item>

        <item>@drawable/p_endgame</item>
        <item>@drawable/p_spiderr</item>
    </array>









</resources>
