<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">


            <Button
                android:id="@+id/btn_back_detail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_arrow"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />


            <ImageView
                android:id="@+id/img_photo_detail"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:paddingRight="16dp"
                android:scaleType="fitCenter"
                android:paddingLeft="16dp"
                android:background="@drawable/p_capt" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center" />

        <RatingBar
            android:id="@+id/rb_rating_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_gravity="center"
            android:progressTint="@color/colorPrimary1"
            android:padding="2dp"
            android:progressBackgroundTint="@android:color/darker_gray"
            android:secondaryProgressTint="@color/colorPrimary1" />

        <TextView
            android:id="@+id/tv_desc_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTitle"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/tv_type_detail"
                        style="@style/TextDesc"
                        android:text="@string/type_detail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTitle"
                        android:text="@string/hour" />

                    <TextView
                        android:id="@+id/tv_hour_detail"
                        style="@style/TextDesc"
                        android:text="@string/hour_detail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTitle"
                        android:text="@string/director" />

                    <TextView
                        android:id="@+id/tv_director_detail"
                        style="@style/TextDesc"
                        android:text="@string/director_detail" />

                </LinearLayout>

            </LinearLayout>







        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>